# Evaluating-Contemporary-Approaches-for-Automated-Compliance-Checks-of-Software-intensive-Systems

./: .gitattributes  .gitignore  README.md
Analysis/: activity_dependencies.py  artifact_dependencies.py
Analysis/aggregation/: 00_requirements.numbers  01_activities.numbers  02_artifacts.numbers  03_challenges.numbers  activities.txt  artifacts.txt  requirements.txt
Analysis/artifactmodel/: README.md  __init__.py  app.py  create_model.py  old__init__.py  parse.py  process.py  pyproject.toml  requirements.txt  svg_components.py  test.py
Analysis/artifactmodel/data/: 00_requirements.csv  00_requirements_aggregated.csv  01_activities_aggregated.csv  01_activities_artifacts.csv  02_artifacts_aggregated.csv  02_automation_approaches.csv
Analysis/artifactmodel/templates/: activities.html  approaches.html  artifacts.html  base.html  demands.html  mapping.html  requirements.html  specific.html
Analysis/comparison/: challeng_comparison.numbers  comparison.numbers  metrics.md  reproducibility.md  reproducibility.numbers
Analysis/instantiation/: are_they_toeing.numbers
Analysis/solely_industry_based/: 00_requirements.numbers  01_activities.numbers  02_artifacts.numbers  03_challenges.numbers
SLR/03_extraction/: 00_requirements.numbers  01_activities_artifacts.numbers  02_automation_approaches.numbers  02_automation_approaches_contains_irrelevant_approaches.numbers  03_extracted_challenges.numbers  04_study_quality_assessment.numbers  05_author_affiliation.numbers  Sources.numbers  Sources_before_final_scoping.numbers
SLR/slr_baseline/: final_paper_base.numbers  (+2 more)
(+31 files in other folders)
